--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,17 +3,38 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(278px, 1fr));
-  grid-gap: 16px;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(clamp(260px, calc((100% / 4) - 24px), 100%), 1fr)
+  );
+  grid-gap: 24px;
+}
+
+.cards-container.grid-view .cards > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 24px 24px;
 }
 
 .cards > ul > li {
-  border: 1px solid var(--color-neutral-500);
-  background-color: var(--background-color)
+  overflow: hidden;
+  padding: var(--spacing-s);
+  background-color: var(--background-color);
+  box-shadow: var(--drop-shadow-box);
+  border-radius: var(--border-radius-large);
+}
+
+.cards-container.grid-view .cards > ul > li {
+  padding: unset;
+  background-color: unset;
+  box-shadow: unset;
+  border-radius: unset;
 }
 
 .cards .cards-card-body {
-  margin: 16px;
+  font-size: var(--body-font-size-base);
+  line-height: var(--body-line-height-base);
+  margin-top: var(--spacing-xl);
 }
 
 .cards .cards-card-image {
@@ -21,11 +42,44 @@
 }
 
 .cards .cards-card-body > *:first-child {
-  margin-top: 0;
+  margin: 0;
+}
+
+.cards .cards-card-body > *:last-child {
+  margin-top: var(--spacing-xs);
+  margin-bottom: 0;
+}
+
+.cards > ul > li picture {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
 
 .cards > ul > li img {
   width: 100%;
-  aspect-ratio: 4 / 3;
+  height: 100%;
+  aspect-ratio: 1 / 1;
+  border-radius: var(--border-radius-large);
   object-fit: cover;
+}
+
+.cards-container.grid-view .cards > ul > li .cards-card-image {
+  height: 100%;
+}
+
+.cards-container.grid-view .cards > ul > li img {
+  aspect-ratio: 3/4;
+}
+
+@media (width >= 600px) {
+  .cards-container.grid-view .cards > ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .cards-container.grid-view .cards > ul > li img {
+    aspect-ratio: 3/4;
+  }
 }
